feat: remove unused home layout, enhance user forms with Bootstrap styling, and improve user list display

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,7 @@
 
 body {
     background-color: rgb(133, 189, 238);
+    /* background-color: #116466; */
     font-family: "Josefin Sans", sans-serif;
 }
 
