--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,9 +15,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 body {
-    /* background-image: linear-gradient(to right, #d7d2cc 0%, #304352 100%); */
+    /* background: linear-gradient(45deg, #ff7e5f, #feb47b); */
     background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
     background-repeat: no-repeat;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     font-family: "Josefin Sans", sans-serif;
 }
 
@@ -29,7 +34,13 @@ body {
 .container {
     background-color: aliceblue;
     border-radius: 2px;
+    z-index: 1;
 }
+
+.form-control.disabled {
+    cursor: not-allowed;
+}
+
 
 /* Button for create new user */
 .btn_button_shadow_border--black {
@@ -61,7 +72,8 @@ body {
 
 
 /* Button for paginate the users */
-.btn_button_arrow--grey {
+.btn_button_arrow--grey,
+.page-link {
     min-width: 115px;
     height: 45px;
     color: #fff;
@@ -130,29 +142,71 @@ body {
 }
 
 
-/* Styles button forms */
-
-.css-button-3d--green {
-    min-width: 130px;
-    height: 40px;
+/* Styles Button Table Action */
+/* Button Show */
+.css_button_3d--blue {
+    min-width: 100px;
+    height: 35px;
     color: #fff;
-    padding: 5px 10px;
+    padding: 6px 10px;
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     position: relative;
     display: inline-block;
     outline: none;
+    text-decoration: none;
     border-radius: 5px;
     border: none;
-    background: #80ed99;
-    box-shadow: 0 5px #57cc99;
-  }
-  .css-button-3d--green:hover {
-    box-shadow: 0 3px #57cc99;
+    background: #6991c7;
+    box-shadow: 0 5px #a3bded;
+}
+
+.css_button_3d--blue:hover {
+    box-shadow: 0 3px #a3bded;
     top: 1px;
-  }
-  .css-button-3d--green:active {
-    box-shadow: 0 0 #57cc99;
+}
+
+.css_button_3d--blue:active {
+    box-shadow: 0 0 #a3bded;
     top: 5px;
-  }
+}
+
+
+/* Button Edit */
+.css_button_3d--yellow {
+    min-width: 100px;
+    height: 35px;
+    color: #fff;
+    padding: 6px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    text-decoration: none;
+    border-radius: 5px;
+    background-color: #e2c311;
+    box-shadow: 0 5px #ebeb13;
+}
+
+.css_button_3d--yellow:hover {
+    box-shadow: 0 3px #ebeb13;
+    top: 1px;
+}
+
+.css_button_3d--yellow:active {
+    box-shadow: 0 0 #ebeb13;
+    top: 5px;
+}
+
+
+/* Aplica para telas menores que 768px */
+@media (max-width: 768px) {
+    .btn_group {
+        display: flex;
+        flex-direction: column;
+        gap: 9px;
+    }
+}
